// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsyncQuestion Integration GET /asyncQuestions/:courseId allows students to view their questions in their course 1`] = `
[
  {
    "aiAnswerText": "q1",
    "answerText": "answer",
    "authorSetVisible": false,
    "closedAt": null,
    "comments": [],
    "courseId": 1,
    "createdAt": "2025-01-01T00:00:00.000Z",
    "creator": {
      "anonId": 3,
      "colour": "#0097A7",
      "id": 2,
      "name": "justin oh",
      "photoURL": "https://example.com",
    },
    "creatorId": 2,
    "id": 1,
    "isAnonymous": true,
    "questionAbstract": "abstract",
    "questionText": "text",
    "questionTypes": [],
    "staffSetVisible": false,
    "status": "AIAnswered",
    "taHelpedId": null,
    "verified": false,
    "votes": [],
    "votesSum": 0,
  },
  {
    "aiAnswerText": "q2",
    "answerText": "answer",
    "authorSetVisible": false,
    "closedAt": null,
    "comments": [],
    "courseId": 1,
    "createdAt": "2025-01-01T00:00:00.000Z",
    "creator": {
      "anonId": 4,
      "colour": "#5A2E2E",
      "id": 2,
      "name": "justin oh",
      "photoURL": "https://example.com",
    },
    "creatorId": 2,
    "id": 2,
    "isAnonymous": true,
    "questionAbstract": "abstract",
    "questionText": "text",
    "questionTypes": [],
    "staffSetVisible": true,
    "status": "AIAnswered",
    "taHelpedId": null,
    "verified": false,
    "votes": [],
    "votesSum": 0,
  },
]
`;

exports[`AsyncQuestion Integration GET /asyncQuestions/:courseId does not show sensitive information for anonymous comments on questions unless they are the creator or staff 1`] = `
{
  "staff": [
    {
      "aiAnswerText": "q2",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [
        {
          "commentText": "comment1",
          "createdAt": "2025-01-02T00:00:00.000Z",
          "creator": {
            "anonId": 4,
            "colour": "#5A2E2E",
            "courseRole": "student",
            "id": 2,
            "isAuthor": true,
            "name": "justin oh",
            "photoURL": "https://example.com",
          },
          "id": 1,
          "isAnonymous": true,
          "questionId": 2,
        },
        {
          "commentText": "comment2",
          "createdAt": "2025-01-02T00:00:00.000Z",
          "creator": {
            "anonId": 5,
            "colour": "#0097A7",
            "courseRole": "student",
            "id": 3,
            "isAuthor": false,
            "name": "tom oh",
            "photoURL": "https://example.com",
          },
          "id": 2,
          "isAnonymous": true,
          "questionId": 2,
        },
      ],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 4,
        "colour": "#5A2E2E",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 2,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q3",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#5A2E2E",
        "id": 3,
        "name": "tom oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 3,
      "id": 3,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q1",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 3,
        "colour": "#0097A7",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 1,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
  ],
  "student": [
    {
      "aiAnswerText": "q2",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [
        {
          "commentText": "comment1",
          "createdAt": "2025-01-02T00:00:00.000Z",
          "creator": {
            "anonId": 4,
            "colour": "#5A2E2E",
            "courseRole": "student",
            "isAuthor": true,
            "photoURL": null,
          },
          "id": 1,
          "isAnonymous": true,
          "questionId": 2,
        },
        {
          "commentText": "comment2",
          "createdAt": "2025-01-02T00:00:00.000Z",
          "creator": {
            "anonId": 5,
            "colour": "#0097A7",
            "courseRole": "student",
            "id": 3,
            "isAuthor": false,
            "name": "tom oh",
            "photoURL": "https://example.com",
          },
          "id": 2,
          "isAnonymous": true,
          "questionId": 2,
        },
      ],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 4,
        "colour": "#5A2E2E",
        "name": "Anonymous",
        "photoURL": null,
      },
      "creatorId": 2,
      "id": 2,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q3",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#5A2E2E",
        "id": 3,
        "name": "tom oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 3,
      "id": 3,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
  ],
}
`;

exports[`AsyncQuestion Integration GET /asyncQuestions/:courseId does not show user information when question is anonymous except if the viewer is the creator or staff 1`] = `
{
  "author": [
    {
      "aiAnswerText": "q1",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 3,
        "colour": "#0097A7",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 1,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q9",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#1abc9c",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 4,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q2",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 4,
        "colour": "#5A2E2E",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 2,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
  ],
  "staff": [
    {
      "aiAnswerText": "q3",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#5A2E2E",
        "id": 3,
        "name": "tom oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 3,
      "id": 3,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q1",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 3,
        "colour": "#0097A7",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 1,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q9",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#1abc9c",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 4,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q2",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 4,
        "colour": "#5A2E2E",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 2,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
  ],
  "student": [
    {
      "aiAnswerText": "q3",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#5A2E2E",
        "id": 3,
        "name": "tom oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 3,
      "id": 3,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q9",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#1abc9c",
        "name": "Anonymous",
        "photoURL": null,
      },
      "creatorId": 2,
      "id": 4,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q2",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 4,
        "colour": "#5A2E2E",
        "name": "Anonymous",
        "photoURL": null,
      },
      "creatorId": 2,
      "id": 2,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
  ],
}
`;

exports[`AsyncQuestion Integration GET /asyncQuestions/:courseId prevents students from seeing questions without both author and staff setting them public with author approval required set true, but staff can see either way 1`] = `
{
  "staff": [
    {
      "aiAnswerText": "q3",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#5A2E2E",
        "id": 3,
        "name": "tom oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 3,
      "id": 3,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q1",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 3,
        "colour": "#0097A7",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 1,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q6",
      "answerText": "answer",
      "authorSetVisible": true,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#1abc9c",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 4,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q8",
      "answerText": "answer",
      "authorSetVisible": true,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 8,
        "colour": "#3498db",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 6,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q7",
      "answerText": "answer",
      "authorSetVisible": true,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 7,
        "colour": "#2ecc71",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 5,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q2",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 4,
        "colour": "#5A2E2E",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 2,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
  ],
  "student": [
    {
      "aiAnswerText": "q3",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#5A2E2E",
        "id": 3,
        "name": "tom oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 3,
      "id": 3,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q6",
      "answerText": "answer",
      "authorSetVisible": true,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#1abc9c",
        "name": "Anonymous",
        "photoURL": null,
      },
      "creatorId": 2,
      "id": 4,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
  ],
}
`;

exports[`AsyncQuestion Integration GET /asyncQuestions/:courseId prevents students from seeing questions without staff setting them public with author approval required set true, but staff can see either way 1`] = `
{
  "staff": [
    {
      "aiAnswerText": "q3",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#5A2E2E",
        "id": 3,
        "name": "tom oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 3,
      "id": 3,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q1",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 3,
        "colour": "#0097A7",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 1,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q6",
      "answerText": "answer",
      "authorSetVisible": true,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#1abc9c",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 4,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q8",
      "answerText": "answer",
      "authorSetVisible": true,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 8,
        "colour": "#3498db",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 6,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q7",
      "answerText": "answer",
      "authorSetVisible": true,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 7,
        "colour": "#2ecc71",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 5,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q2",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 4,
        "colour": "#5A2E2E",
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 2,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
  ],
  "student": [
    {
      "aiAnswerText": "q3",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#5A2E2E",
        "id": 3,
        "name": "tom oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 3,
      "id": 3,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": false,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q6",
      "answerText": "answer",
      "authorSetVisible": true,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 6,
        "colour": "#1abc9c",
        "name": "Anonymous",
        "photoURL": null,
      },
      "creatorId": 2,
      "id": 4,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q2",
      "answerText": "answer",
      "authorSetVisible": false,
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "anonId": 4,
        "colour": "#5A2E2E",
        "name": "Anonymous",
        "photoURL": null,
      },
      "creatorId": 2,
      "id": 2,
      "isAnonymous": true,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "staffSetVisible": true,
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "votes": [],
      "votesSum": 0,
    },
  ],
}
`;
